@@ -10,6 +10,12 @@ What's New in Python 3.2.4
 Core and Builtins
 -----------------
 
+- Issue #11603 (again): Setting __repr__ to __str__ now raises a RuntimeError
+  when repr() or str() is called on such an object.
+
+- Issue #14658: Fix binding a special method to a builtin implementation of a
+  special method with a different name.
+
 - Issue #14630: Fix a memory access bug for instances of a subclass of int
   with value 0.
 
